@@ -90,6 +90,14 @@
         <div id="news">
 	    <h2 class="">News</h2>
 	    
+	    <h3>January 19, 2009</h3>
+	      <b>Stable</b> version 2.25.5 released.<br />
+	      <ul>
+	      <li>Fixed #567422, Add missing include to eggaccelerators.c</li>
+          <li>Fixed launch_default_for_uri_and_scheme function to work with ghelp and mailto addresses</li>
+          </ul>
+	      <a href="download.html">Download it</a>
+	      
 	    <h3>January 12, 2009</h3>
 	      <b>Stable</b> version 2.24.3 released.<br />
 	      <ul>
